# vector-like-container

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  benchmark_vector.cpp  bm_plot.py  chunk_vector.hpp  chunk_vector_v2.hpp  markdown_fill.py  run_coverage.sh  test_vector.cpp
BM_results/: benchmark_chunk_vector.txt  benchmark_chunk_vector_1024.json  benchmark_chunk_vector_16384.json  benchmark_chunk_vector_2048.json  benchmark_chunk_vector_32768.json  benchmark_chunk_vector_4096.json  benchmark_chunk_vector_65536.json  benchmark_chunk_vector_8192.json  benchmark_chunk_vector_auto.txt  benchmark_chunk_vector_o0.txt  benchmark_chunk_vector_v2.txt  benchmark_chunk_vector_v2_1024.json  benchmark_chunk_vector_v2_16384.json  benchmark_chunk_vector_v2_2048.json  benchmark_chunk_vector_v2_32768.json  benchmark_chunk_vector_v2_4096.json  benchmark_chunk_vector_v2_65536.json  benchmark_chunk_vector_v2_8192.json  benchmark_chunk_vector_v2_o0.txt  benchmark_deque_as_vector.txt  benchmark_stl_vector.txt  bm_plot.py  markdown_fill.py
